# tpmsfem

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
include/: femCalculator.cpp  femCalculator.h  tpmsTetGenerator.cpp  tpmsTetGenerator.h
